src/objects/SponsorSiteList__c.object
<CustomObject>
    <description>Management of prefered Site Lists for Sponsors</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SponsorProduct__c</fullName>
        <label>Sponsor Product</label>
        <referenceTo>SponsorProduct__c</referenceTo>
        <relationshipLabel>Sponsor Site Lists</relationshipLabel>
        <relationshipName>SponsorSiteLists</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Sponsor Site List</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sponsors Site Lists</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>